# xrtl

./: CMakeLists.txt  LICENCE.txt  New-XrTypeTraits.ps1  README.md  xrtl.sln
test/: init_test.cpp  math_test.cpp  maths_test.cpp  packages.config  path_test.cpp  pch.cpp  pch.h  result_test.cpp  test.vcxproj  test.vcxproj.filters  traits_test.cpp  unique_handle_test.cpp
xrtl/: packages.config  xrtl.vcxproj  xrtl.vcxproj.filters
xrtl/include/xrtl/: api.h  debug_messenger.h  debug_messenger.inl  debug_policy.h  glm.h  initialise.h  matrix.h  matrix.inl  path.h  result.h  unique_handle.h  unique_handle.inl  xmath.h  xr_error_category.h  xr_error_category.inl  xr_type_traits.h  xr_type_traits.inl
